# fapulator

./: CMakeLists.txt  README.md
app/: keypad_test.c  snake_game.c
fapulator/: hal.cpp  main.cpp
fapulator/flipper/applications/gui/: canvas.h  canvas_i.h  gui.c  gui.h  gui_i.h  view_port.c
fapulator/flipper/furi/: furi.h
fapulator/flipper/furi/core/: base.h  core_defines.h  log.h  mutex.h  pubsub.c  record.c  thread.h  valuemutex.h
fapulator/flipper/lib/toolbox/: m_cstr_dup.h
fapulator/hal/: display.h  hal.h  input.h
fapulator/theseus/: check.h  furi_hal_resources.h  memory.c  u8g2.h
fapulator/theseus/applications/gui/: canvas.cpp
fapulator/theseus/applications/gui/font/: fonts.cpp  fonts.h  u8g2_font_render.c  u8g2_font_render.h
fapulator/theseus/applications/input/: input.c
fapulator/theseus/core/: event_flag.cpp  message_queue.cpp  mutex.cpp  thread.cpp  timer.cpp
